<resources>
    <string name="app_name">知识宝盒</string>
    <string name="bottom_main">首页</string>
    <string name="bottom_mine">我的</string>
    <string name="toolbar_menu_batch_editor">批量编辑</string>
    <string name="toolbar_menu_new_folder">新建文件夹</string>
    <string name="toolbar_menu_sort_modify_time">按修改时间</string>
    <string name="toolbar_menu_sort_create_time">按创建时间</string>
    <string name="toolbar_menu_sort_name">按名称</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="move">移动</string>
    <string name="rename">重命名</string>
    <string name="remove">删除</string>
    <string name="may_find">您可能想找:</string>
    <string name="collect_files">收藏文件</string>
    <string name="document_notes">文档笔记</string>
    <string name="login_user_register">新用户注册</string>
    <string name="login_button">登录</string>
    <string name="login_phone">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_input_phone">请输入您的手机号码</string>
    <string name="login_input_password">请输入密码</string>
    <string name="register_and_login">注册并登录</string>
    <string name="mine_edit_avatar">修改头像</string>
    <string name="mine_edit_nickname">修改昵称</string>
    <string name="mine_basic_info">基本资料</string>
    <string name="mine_logout">退出登录</string>
    <string name="register_input_code">请输入验证码</string>
    <string name="register_account_register">账号注册</string>
    <string name="register_get_code">获取验证码</string>
    <string name="ok">确认</string>
    <string name="move_here">移动到此处</string>

</resources>
