<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_all_round_white"
        android:padding="@dimen/dimen_10_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_new_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_home_listitem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_new_folder"
                style="@style/AppTheme.TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_20_dp"
                android:paddingBottom="@dimen/dimen_20_dp"
                android:text="@string/toolbar_menu_new_folder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0_5_dp"
                android:layout_below="@+id/tv_new_folder"
                android:background="@color/grey_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_home_listitem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_new_folder">

            <TextView
                android:id="@+id/tv_rename"
                style="@style/AppTheme.TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_20_dp"
                android:paddingBottom="@dimen/dimen_20_dp"
                android:text="@string/rename" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0_5_dp"
                android:layout_below="@+id/tv_rename"
                android:background="@color/grey_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_home_listitem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_rename">

            <TextView
                android:id="@+id/tv_delete"
                style="@style/AppTheme.TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_20_dp"
                android:paddingBottom="@dimen/dimen_20_dp"
                android:text="@string/remove" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0_5_dp"
                android:layout_below="@+id/tv_delete"
                android:background="@color/grey_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_home_listitem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_delete">

            <TextView
                android:id="@+id/tv_move"
                style="@style/AppTheme.TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_20_dp"
                android:paddingBottom="@dimen/dimen_20_dp"
                android:text="@string/move" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>