<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_login_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phone"
        style="@style/AppTheme.TitleTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginLeft="@dimen/dimen_25_dp"
        android:padding="@dimen/dimen_5_dp"
        />
    <EditText
        android:id="@+id/et_login_phone"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/barrier_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_login_phone"
        android:background="@null"
        android:paddingLeft="@dimen/dimen_30_dp"
        style="@style/AppTheme.PhoneStyle"
        android:paddingTop="@dimen/dimen_14_dp"
        android:paddingBottom="@dimen/dimen_14_dp"
        android:layout_marginRight="@dimen/dimen_25_dp"
        />
    <View
        android:id="@+id/view_grey_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_5_dp"
        android:background="@color/grey_edittext_line"
        app:layout_constraintTop_toBottomOf="@+id/et_login_phone"
        android:layout_marginLeft="@dimen/dimen_25_dp"
        android:layout_marginRight="@dimen/dimen_25_dp"
        />
    <TextView
        android:id="@+id/tv_login_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        style="@style/AppTheme.TitleTextStyle"
        app:layout_constraintTop_toTopOf="@+id/view_grey_line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dimen_25_dp"
        android:padding="@dimen/dimen_5_dp"
        android:layout_marginTop="@dimen/dimen_25_dp"
        />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_login_phone,tv_login_pwd"
        />
    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/barrier_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_login_pwd"
        android:background="@null"
        android:paddingLeft="@dimen/dimen_30_dp"
        style="@style/AppTheme.PasswordStyle"
        android:paddingTop="@dimen/dimen_14_dp"
        android:paddingBottom="@dimen/dimen_14_dp"
        android:layout_marginRight="@dimen/dimen_25_dp"
        />
    <View
        android:id="@+id/view_grey_line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_5_dp"
        android:background="@color/grey_edittext_line"
        app:layout_constraintTop_toBottomOf="@+id/et_login_pwd"
        android:layout_marginLeft="@dimen/dimen_25_dp"
        android:layout_marginRight="@dimen/dimen_25_dp"
        />
    <Button
        android:id="@+id/bt_login"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_grey_line2"
        android:layout_marginLeft="@dimen/dimen_25_dp"
        android:layout_marginRight="@dimen/dimen_25_dp"
        android:background="@drawable/sel_shape_login_round"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18_sp"
        />
    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        android:text="@string/login_user_register"
        style="@style/AppTheme.TitleTextStyle"
        android:padding="@dimen/dimen_5_dp"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:clickable="true"
        />
</androidx.constraintlayout.widget.ConstraintLayout>