<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipChildren="false"
        >
        <ImageView
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ico_mine_background"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <Space
            android:id="@+id/marginSpace"
            android:layout_width="@dimen/dimen_30_dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <View
            android:layout_width="@dimen/dimen_124_dp"
            android:layout_height="@dimen/dimen_124_dp"
            android:background="@drawable/shape_mine_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/marginSpace"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:layout_marginBottom="@dimen/dimen_60_dp"
            />
        <View
            android:layout_width="@dimen/dimen_46_5_dp"
            android:layout_height="@dimen/dimen_46_5_dp"
            android:background="@drawable/shape_mine_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            android:layout_marginTop="@dimen/dimen_30_dp"
            app:layout_constraintTop_toTopOf="parent"
            />
        <Space
            android:id="@+id/marginSpace2"
            android:layout_width="@dimen/dimen_40_dp"
            android:layout_height="@dimen/dimen_40_dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            />
        <View
            android:layout_width="@dimen/dimen_124_dp"
            android:layout_height="@dimen/dimen_124_dp"
            android:background="@drawable/shape_mine_background"
            app:layout_constraintRight_toRightOf="@+id/marginSpace2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dimen_30_dp"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            />
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dimen_73_5_dp"
            android:layout_height="@dimen/dimen_73_5_dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/dimen_20_dp"
            android:src="@mipmap/ico_avatar"
            />
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_center"
            app:layout_constraintLeft_toRightOf="@+id/iv_avatar"
            android:layout_marginLeft="@dimen/dimen_5_dp"
            android:layout_marginBottom="@dimen/dimen_5_dp"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16_sp"
            />
        <TextView
            android:id="@+id/tv_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="欢迎来到此平台"
            app:layout_constraintLeft_toRightOf="@+id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_center"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_12_sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ib_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ico_notice"
        android:background="@null"
        app:layout_constraintRight_toLeftOf="@+id/ib_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_actionbar_line"
        android:padding="@dimen/dimen_5_dp"
        android:layout_marginRight="@dimen/dimen_46_5_dp"
        />
    <ImageButton
        android:id="@+id/ib_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_actionbar_line"
        android:padding="@dimen/dimen_5_dp"
        android:src="@mipmap/ico_settings"
        android:background="@null"
        android:layout_marginRight="@dimen/dimen_10_dp"
        />
    <View
        android:id="@+id/view_actionbar_line"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="?android:actionBarSize"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_0_dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/headLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fillViewport="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_10_dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_avatar"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/sel_home_listitem"
                android:paddingTop="@dimen/dimen_10_dp"
                android:paddingBottom="@dimen/dimen_10_dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/iv_edit_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ico_mine_avatar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_edit_avatar"
                    style="@style/AppTheme.TextStyle"
                    app:layout_constraintLeft_toRightOf="@+id/iv_edit_avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dimen_12_dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="@dimen/dimen_5_dp"
                    android:src="@mipmap/ico_mine_right_arrow"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_nickname"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_avatar"
                android:background="@drawable/sel_home_listitem"
                android:paddingTop="@dimen/dimen_10_dp"
                android:paddingBottom="@dimen/dimen_10_dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/iv_edit_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ico_mine_nickname"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_edit_nickname"
                    style="@style/AppTheme.TextStyle"
                    app:layout_constraintLeft_toRightOf="@+id/iv_edit_nickname"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dimen_12_dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="@dimen/dimen_5_dp"
                    android:src="@mipmap/ico_mine_right_arrow"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_basic_info"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_nickname"
                android:background="@drawable/sel_home_listitem"
                android:paddingTop="@dimen/dimen_10_dp"
                android:paddingBottom="@dimen/dimen_10_dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/iv_basic_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ico_mine_basic_info"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_basic_info"
                    style="@style/AppTheme.TextStyle"
                    app:layout_constraintLeft_toRightOf="@+id/iv_basic_info"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dimen_12_dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="@dimen/dimen_5_dp"
                    android:src="@mipmap/ico_mine_right_arrow"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/bt_logout"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_basic_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.9"
                android:background="@drawable/sel_shape_logout_round"
                android:text="@string/mine_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_14_sp"
                android:layout_marginLeft="@dimen/dimen_20_dp"
                android:layout_marginRight="@dimen/dimen_20_dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
